# Turtle-Trajectories-and-Xacro-Arm

./: CMakeLists.txt  README.md  commands.txt  package.xml
config/: arm.rviz  arm.xacro  arm.yaml  trajectory.yaml  turtle_view.rviz
launch/: figure_eight.launch  mark_arm.launch  xacro_arm.launch
nodes/: arm_mark  arm_mark.py  arm_traj  trajectory
nuws/devel/: .catkin  setup.sh
nuws/devel/include/interbotix_joy_control/: ArmJoyControl.h
nuws/devel/include/interbotix_sdk/: JointCommands.h  OperatingModes.h  OperatingModesRequest.h  RegisterValues.h  RegisterValuesRequest.h  RobotInfo.h  RobotInfoRequest.h  RobotInfoResponse.h  SingleCommand.h
nuws/devel/include/interbotix_turret_control/: TurretJoyControl.h
nuws/devel/lib/dynamixel_workbench_controllers/: find_dynamixel
nuws/devel/lib/dynamixel_workbench_operators/: joint_operator  wheel_operator
nuws/devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
nuws/devel/lib/interbotix_diagnostic_tool/: diagnostic_tool_node
nuws/devel/lib/interbotix_joy_control/: joy_control_node
nuws/devel/lib/interbotix_moveit_interface/: moveit_interface_gui  moveit_interface_node  moveit_python_interface
nuws/devel/lib/interbotix_pid_control/: pid_control_node
nuws/devel/lib/interbotix_puppet_control/: puppet_control_node  puppet_control_single_node
nuws/devel/lib/interbotix_sdk/: arm_node
nuws/devel/lib/interbotix_turret_control/: turret_control_joy_node
nuws/devel/lib/moveit_visual_tools/: moveit_visual_tools_demo
nuws/devel/lib/pkgconfig/: dynamixel_workbench_controllers.pc  dynamixel_workbench_msgs.pc  dynamixel_workbench_operators.pc  dynamixel_workbench_toolbox.pc  gmapping.pc  interbotix_descriptions.pc  interbotix_diagnostic_tool.pc  interbotix_gazebo.pc  interbotix_joy_control.pc  interbotix_moveit.pc  interbotix_moveit_interface.pc  interbotix_pid_control.pc  interbotix_puppet_control.pc  interbotix_sdk.pc  interbotix_turret_control.pc  moveit_visual_tools.pc  rqt_tf_tree.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
nuws/devel/lib/rqt_tf_tree/: rqt_tf_tree
nuws/devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
nuws/devel/lib/turtlebot3_example/: turtlebot3_client  turtlebot3_cliff  turtlebot3_server  turtlebot3_sonar
nuws/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
nuws/devel/lib/turtlebot3_gazebo/: turtlebot3_drive
nuws/devel/lib/turtlebot3_slam/: flat_world_imu_node
nuws/src/homework2/: CMakeLists.txt  calculations  package.xml  setup.py
nuws/src/homework2/launch/: figure_eight.launch
src/homework2/: calculations.py
test/: test_values.py  valus_testing.test
(+72 files in other folders)
