<?xml version="1.0"?>
<package format="2">
  <name>turtle_trajectories_and_xacro_arm</name>
  <version>0.0.1</version>
  <description>makes the turtlebot follow a figure-8 trajectory</description>

  <maintainer email="yael.bshalom@gmail.com">yael Ben Shalom</maintainer>
  <author email="yael.bshalom@gmail.com">yael Ben Shalom</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>  
  <exec_depend>message_runtime</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>

  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend> 
</package>
